# threedee-mcp

./: README.md  pyproject.toml
backend/: bun.lockb  index.ts  package.json  tsconfig.json
backend/mcp/: pyproject.toml
mcp/: .gitignore
mcp/src/threedee/: example_server.py  meshy_api.py
mcp/tests/: test_meshy_api.py
src/threedee/: client.py  meshy_api.py  server.py  tools.py
src/threedee-ui/: package.json
src/threedee-ui/src/: App.tsx
src/threedee-ui/src/components/: ContextMenu.tsx
src/threedee-ui/src/components/Scene/: Scene.css  Scene.tsx
src/threedee-ui/src/components/Scene/ChatInput/: chatInput.css  chatInput.tsx
tests/: test_image_to_3d.py
threedee-ui/: template.html
threedee-ui/src/components/Scene/: Scene.tsx
ui/: index.html  package.json  tailwind.config.js
ui/src/: App.tsx
ui/src/components/: ChatInput.tsx  TextField.tsx  constants.ts
ui/src/components/Scene/: Scene.tsx
ui/src/hooks/: useAPI.ts
ui/src/lib/api-client/: client.ts  config.ts  types.ts
ui/src/services/: mcp.ts
